# cronkite

./: .gitignore  CMakeLists.txt  LICENSE  README  README.mkdn  README.rst  README.txt  TODO.rst
cmake/helpers/: vg-wrap.sh
cmake/modules/: AddTestDir.cmake  BuildManpage.cmake  CustomTests.cmake  FindPod2man.cmake  FindPyNose.cmake  FindValgrind.cmake  MacroOutOfSourceBuild.cmake  NoseTests.cmake  ParseArguments.cmake
examples/cronkite-cli/: CMakeLists.txt  README.rst  cli.c  cronkite-cli.1.pod  cronkite-cli.1.txt  cronkite.1.txt  tests.py
examples/cronkite-cli/tests/: cli-badarg.sh  cli-badquery.sh  cli-badurl.sh  cli-empty.sh  cli-goodnonetquery.sh  cli-help.sh  cli-localfile.sh  cli-notjson.sh  cli-nourl.sh  notjson.txt
examples/lua/: CMakeLists.txt  luacronkite.c
examples/python-cmodule/: CMakeLists.txt  pycronkite.c  setup.py.in
examples/python-ctypes/: CMakeLists.txt  cronkite.py  pycronkite.py  setup.py.in
examples/python-modules/cmodule/: README.txt  setup.py
examples/python-modules/ctypes/: cronkite.py
examples/python-tests/: tests.py
examples/python/cmodule/: CMakeLists.txt  setup.py.in
examples/python/ctypes/: CMakeLists.txt  setup.py
man/: CMakeLists.txt  cronkite.1.pod  cronkite.3.pod
python-modules/cmodule/: pycronkite.c
python-modules/ctypes/: cronkite.py
src/: CMakeLists.txt  cli.c  config.h.in  cronkite.c  cronkite.h  cronkite_p.h  main.c  main.h
src/cJSON/: CMakeLists.txt  cJSON.c
src/cJson/: CMakeLists.txt
src/cli/: CMakeLists.txt  README.rst  cli.c  cli.h.in
src/cli/tests/: cli-badarg.sh  cli-badquery.sh  cli-badurl.sh  cli-empty.sh  cli-help.sh  cli-localfile.sh  cli-notjson.sh  cli-nourl.sh  cli-version.sh  example.json
src/jansson/: CMakeLists.txt
src/lib/: CMakeLists.txt  config.h.in  cronkite.c  cronkite.h
src/man/: CMakeLists.txt  cronkite.1.txt  cronkite.3.pod  libcronkite.3.txt
